grammar/assembly.peg
program = definitions:definition* statements:statement*

definition = 'def' space+ identifier (newline / space) statements:statement+ space? 'end' newline

identifier = characters:character+

character = [a-zA-Z0-9_]

statement = current:state ',' read:symbol ',' next:state ',' write:symbol ',' move:direction ';' newline?

state = 's' digits:digit+

digit = [0-9]

symbol = [a-zA-Z0-9_]

direction = 'L' / 'R'

space = ' '

newline = '\n'
